# silentHillEnemy

./: LICENSE  download_monsters.py  pyproject.toml  requirements-dev.txt  requirements.txt
data/: metadata.json
data/preprocessing/: cache.py  loader.py  metadata.py  normalization.py
database/: references.txt
database/PT/: 00_init_db.sql  01_tables.sql  02_seed_data.sql  03_queries.sql  04_indexes.sql  05_triggers.sql  06_views.sql  07_backup_restore.sql
database/SL Downpour/: 00_init_db.sql  01_tables.sql  02_seed_data.sql  03_queries.sql  04_indexes.sql  05_triggers.sql  06_views.sql  07_backup_restore.sql
database/SL Homecoming/: 00_init_db.sql  01_tables.sql  02_seed_data.sql  03_queries.sql  04_indexes.sql  05_triggers.sql  06_views.sql  07_backup_restore.sql
database/SL Origins/: 00_init_db.sql  01_tables.sql  02_seed_data.sql  03_queries.sql  04_indexes.sql  05_triggers.sql  06_views.sql  07_backup_restore.sql
database/SL Shattered Memory/: 00_init_db.sql  01_tables.sql  02_seed_data.sql  03_queries.sql  04_indexes.sql  05_triggers.sql  06_views.sql  07_backup_restore.sql
database/Silent Hill 1/: 00_init_db.sql  01_tables.sql  02_seed_data.sql  03_queries.sql  04_indexes.sql  05_triggers.sql  06_views.sql  07_backup_restore.sql
database/Silent Hill 2/: 00_init_db.sql  01_tables.sql  02_seed_data.sql  03_queries.sql  (+4 more)
main/: db_connector.py  silenthillenemy.py
silent-hill-collector/: package-lock.json  package.json  setup-silent-hill-collector.js  silent-hill-config.js  silent-hill-image-fetcher.js
src/: horror_taxonomy.py  nightmare_logic.py
(+27 files in other folders)
